Reducing the N+1 querying problem by 60% and refactoring Services and repositories and DTOs for better performance, pagination for users and posts in users page and home page.